npy2parquet: Added mention on requirements

--- a/npy2parquet_demo.ipynb
+++ b/npy2parquet_demo.ipynb
@@ -54,6 +54,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0eabeaf1-94db-40b3-9dcb-90fd219ca895",
+   "metadata": {},
+   "source": [
+    "## Requirements\n",
+    "\n",
+    "This module requires `numpy`-, `pandas`- and `pyarrow`-modules.\n",
+    "\n",
+    "You can install them with:\n",
+    "\n",
+    "```sh\n",
+    "pip install numpy pandas pyarrow\n",
+    "```\n",
+    "for virtual environments or\n",
+    "```sh\n",
+    "conda install numpy pandas pyarrow\n",
+    "```\n",
+    "for conda environments."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0eff3392-aaad-4736-a2fb-7388559b87e7",
    "metadata": {},
    "source": [
